--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
-tests/data.unknown_mime_type binary
-tests/hello.txt.gz binary
-tests/sample.* binary
+tests/data.unknown_mime_type*binary
+tests/hello.txt.gz*binary
+tests/sample.  binary
+ 
